[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprite/interface/quit_normal_button.png" type="Texture" id=1]
[ext_resource path="res://assets/sprite/interface/start_selected_button.png" type="Texture" id=2]
[ext_resource path="res://resources/fontx16.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/TESTEBUTTON.gd" type="Script" id=4]
[ext_resource path="res://assets/sprite/interface/quit_selected_button.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/interface/start_normal_button.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 20 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 100, 20 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
normal_map = ExtResource( 6 )
region_rect = Rect2( 0, 0, 100, 20 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 20 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 42.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 42.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
